5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4343/executions/1644_2703.log
== SUBMITION (2019-04-16 13:09:29) 
-- CODE:
num=int(input("digite sua idade"))


if(num>18):
	mensagem= "eleitor"
	else:
		mensagem= "nao _eleitor"
		print (mensagem)
-- EXECUTION TIME:
0.186931
-- ERROR:
  File "/home/codebench/codes/1644/2703/main.py", line 6
    else:
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 13:10:31) 
-- CODE:
num=int(input("digite sua idade"))

if(num>=18) :
	mensagem = "eleitor"
else:
		mensagem = "nao _eleitor"
print (mensagem)
-- EXECUTION TIME:
0.212768
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
nao _eleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
eleitor
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 13:10:33) 
-- CODE:
num=int(input("digite sua idade"))

if(num>=18) :
	mensagem = "eleitor"
else:
		mensagem = "nao _eleitor"
print (mensagem)
-- EXECUTION TIME:
0.158851
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
nao _eleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
eleitor
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 13:10:44) 
-- CODE:
num = int(input("digite sua idade"))

if(num>=18) :
	mensagem = "eleitor"
else:
		mensagem = "nao _eleitor"
print (mensagem)
-- EXECUTION TIME:
0.186011
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
nao _eleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
eleitor
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 13:11:00) 
-- CODE:
num = int(input("Digite sua idade: "))

if(num>=18) :
	mensagem = "eleitor"
else:
		mensagem = "nao _eleitor"
print (mensagem)
-- EXECUTION TIME:
0.144729
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
nao _eleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
eleitor
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 13:11:15) 
-- CODE:
num = int(input("Digite sua idade: "))

if(num>=18):
	mensagem = "eleitor"
else:
		mensagem = "nao _eleitor"
print (mensagem)
-- EXECUTION TIME:
0.162422
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
nao _eleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
eleitor
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 13:11:36) 
-- CODE:
num = int(input("Digite sua idade: "))

if (num>=18):
	mensagem = "eleitor"
else:
		mensagem = "nao _eleitor"
print (mensagem)
-- EXECUTION TIME:
0.149607
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
nao _eleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
eleitor
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 13:11:57) 
-- CODE:
num = int(input("Digite sua idade: "))

if(num>=18):
	mensagem = "eleitor"
else:
	mensagem = "nao _eleitor"
	
print (mensagem)
-- EXECUTION TIME:
0.146836
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
nao _eleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
eleitor
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 14:45:28) 
-- CODE:
num = int(input("Digite sua idade: "))

if(num>=18):
	mensagem = "eleitor"
else:
	mensagem = "nao _eleitor"
	
print (mensagem)
-- EXECUTION TIME:
0.187516
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
nao _eleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
eleitor
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 14:47:08) 
-- CODE:
num = int(input("Digite sua idade: "))
if(num>=18):
	mensagem = "eleitor"
else:
	mensagem = "nao_eleitor"
print (mensagem)
-- EXECUTION TIME:
0.148527
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
nao_eleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
eleitor
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
